--- a/rouletteApp/Base.lproj/Main.storyboard
+++ b/rouletteApp/Base.lproj/Main.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +12,125 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="rouletteApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n8W-B8-p8i">
+                                <rect key="frame" x="106" y="451" width="108" height="84"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="84" id="Rew-BS-pHX"/>
+                                    <constraint firstAttribute="width" constant="108" id="hdv-La-5lr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="32"/>
+                                <state key="normal" title="GO">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="doneButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1rw-MJ-txd"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lke-yN-Teo">
+                                <rect key="frame" x="2" y="260" width="316" height="40"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zef-ID-HvW">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="5Zs-2l-eLs"/>
+                                            <constraint firstAttribute="width" constant="150" id="oIB-Pf-rFV"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="textL:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="yVT-um-ypb"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2DF-cr-JNT">
+                                        <rect key="frame" x="166" y="0.0" width="150" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="textR:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="3ye-uu-n1g"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RsN-x3-Fq3">
+                                <rect key="frame" x="92.5" y="328" width="135" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="135" id="Zvy-g0-K6c"/>
+                                    <constraint firstAttribute="height" constant="40" id="zrJ-yL-5Yb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="35"/>
+                                <state key="normal" title="RETRY">
+                                    <color key="titleColor" red="0.1215686275" green="0.12941176469999999" blue="0.14117647059999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="retryB:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ROM-0v-UWU"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZh-3X-4nw">
+                                <rect key="frame" x="0.0" y="20" width="320" height="232"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waku.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="qyJ-Ci-RwW">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="232"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="232" id="8ln-VD-OIt"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLM-jl-Vg1" customClass="LTMorphingLabel" customModule="LTMorphingLabel">
+                                        <rect key="frame" x="41" y="50" width="238" height="132"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="qyJ-Ci-RwW" firstAttribute="top" secondItem="KZh-3X-4nw" secondAttribute="top" id="2JL-QK-HJI"/>
+                                    <constraint firstAttribute="trailing" secondItem="YLM-jl-Vg1" secondAttribute="trailing" constant="41" id="7Vu-BE-NmX"/>
+                                    <constraint firstAttribute="bottom" secondItem="YLM-jl-Vg1" secondAttribute="bottom" constant="50" id="K4r-m6-fnP"/>
+                                    <constraint firstItem="YLM-jl-Vg1" firstAttribute="leading" secondItem="KZh-3X-4nw" secondAttribute="leading" constant="41" id="LkT-D9-SFo"/>
+                                    <constraint firstItem="YLM-jl-Vg1" firstAttribute="top" secondItem="KZh-3X-4nw" secondAttribute="top" constant="50" id="PwM-lr-Hqv"/>
+                                    <constraint firstItem="qyJ-Ci-RwW" firstAttribute="leading" secondItem="KZh-3X-4nw" secondAttribute="leading" id="Yin-NZ-hS4"/>
+                                    <constraint firstAttribute="bottom" secondItem="qyJ-Ci-RwW" secondAttribute="bottom" id="jkm-JR-ZDZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="qyJ-Ci-RwW" secondAttribute="trailing" id="qTA-yW-drC"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="n8W-B8-p8i" firstAttribute="top" secondItem="RsN-x3-Fq3" secondAttribute="bottom" constant="83" id="Ewb-7a-ECh"/>
+                            <constraint firstItem="n8W-B8-p8i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="J2c-pw-sf5"/>
+                            <constraint firstItem="RsN-x3-Fq3" firstAttribute="top" secondItem="lke-yN-Teo" secondAttribute="bottom" constant="28" id="Lul-iA-g5t"/>
+                            <constraint firstItem="KZh-3X-4nw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="P7K-S0-tc3"/>
+                            <constraint firstItem="RsN-x3-Fq3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Pkl-kG-Uso"/>
+                            <constraint firstItem="KZh-3X-4nw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="atI-bR-OYB"/>
+                            <constraint firstItem="KZh-3X-4nw" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ddu-xf-54S"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="n8W-B8-p8i" secondAttribute="bottom" constant="33" id="fsn-ld-qxe"/>
+                            <constraint firstItem="lke-yN-Teo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zID-zT-1HG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="doneB" destination="n8W-B8-p8i" id="7WA-qi-SPp"/>
+                        <outlet property="retryButton" destination="RsN-x3-Fq3" id="9kP-p2-ni3"/>
+                        <outlet property="sampleLabel" destination="YLM-jl-Vg1" id="Hwm-gw-t2x"/>
+                        <outlet property="textLeft" destination="Zef-ID-HvW" id="jv5-tq-2Ri"/>
+                        <outlet property="textRight" destination="2DF-cr-JNT" id="umB-y8-XJg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="133.125" y="132.04225352112675"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="waku.jpg" width="1132" height="652"/>
+    </resources>
 </document>
